# hello

./: .gitignore  package-lock.json  package.json  tsconfig.json
STEP1/: make_wallet.sh  package.json  readme.md
STEP1/client/src/: hello.ts
STEP1/server/: Makefile
STEP1/server/src/hello/: hello.c
client/: hello.ts
server/: Makefile  package-lock.json  package.json
server/hello/: .gitignore  Cargo.toml
server/hello/src/: lib.rs
