[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []          # エントリーポイントなし

[dependencies]
solana-program="1.10.19"    # Solana SDKの利用宣言とバージョン指定

[lib]
name='hello'
crate-type = ["cdylib", "rlib"]  # cdylib：ダイナミックライブラリ用ビルド

